--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -47,6 +47,4 @@ button:hover {
     cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
-    .containerHeader {}
-}
+@media screen and (max-width: 480px) {}
