--- a/src/component/About.css
+++ b/src/component/About.css
@@ -48,7 +48,7 @@
     text-align: end;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1000px) {
     .content1 {
         display: flex;
         flex-direction: column-reverse;
@@ -71,3 +71,27 @@
         text-align: center;
     }
 }
+
+/* @media screen and (max-width: 480px) {
+    .content1 {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        padding-left: 0%;
+        margin-right: 0%;
+    }
+    .content2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 0%;
+        margin-left: 0%;
+    }
+    .content-l {
+        text-align: center;
+    }
+    .content-r {
+        margin-left: 0px;
+        text-align: center;
+    }
+} */
