--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -34,10 +34,10 @@
 .btn-yello button {
     width: 100%;
     padding: 1rem;
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: serif;
     font-style: unset;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 218, 6);
     border: none;
     border-radius: 10px;
     box-shadow: 0px 2px 2px white;
